--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -77,7 +77,7 @@
 
 			<!--Title-->
 			<div class="font-sans">
-				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a href="/" class="text-base md:text-xl text-cyan-700 dark:text-cyan-400 font-bold no-underline hover:underline">Solo leveling</a></p>
+				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a id="seriesTitle" href="" class="text-base md:text-xl text-cyan-700 dark:text-cyan-400 font-bold no-underline hover:underline">Solo leveling</a></p>
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl dark:text-gray-100"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 						<p id="chapReads" class="text-sm md:text-base font-normal text-gray-600"></p>
@@ -180,7 +180,7 @@
 		<!--Next & Prev Links-->
 		<div class="font-sans flex justify-between content-center px-4 pb-12">
 			<div class="text-left">
-				<span id="prevChapHeading" class="text-xs md:text-sm font-bold text-gray-600"> Previous Chapter</span><br>
+				<span id="prevChapHeading" class="text-xs md:text-sm font-bold text-gray-600">Previous Chapter</span><br>
 				<p><a id="prevChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 			<div class="text-right">
