fixed novelinfo page

--- a/html/home.html
+++ b/html/home.html
@@ -170,7 +170,7 @@
         Carousel wrapper
         <div id="adsContainer" class="overflow-hidden relative h-48 rounded-lg sm:h-64 xl:h-96 2xl:h-96">
           <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
-            <img id="ad0" onclick="adRedirect(0)"
+            <img id="" onclick="adRedirect(0)"
               src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapers.net%2Fweb%2Fwallpapers%2Fanime-sunset-hd-wallpaper%2F5120x2160.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
             <h1 class="z-50 ">LOL</h1>
