--- a/html/genre.html
+++ b/html/genre.html
@@ -108,72 +108,22 @@
       <a href="/popular" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
     </div>
   </div>
-  <script>document.getElementById('togglemebutton').onclick = function() {
-    document.getElementById("resultnav").classList.toggle("hidden");
-  }
-  
-  //document.getElementById('togglemebutton').onclick = function () {
-  //  document.getElementById("toggleme").classList.toggle("hidden");
-  //}
-  
-  
-  const toggleprofile = document.getElementById("toggleprofile");
-  const resultprofile = document.getElementById("resultprofile");
-  [...document.querySelectorAll('body')].forEach(el => {
-    el.addEventListener('click', event => {
-      if (event.target.parentElement.id !== "toggleprofile") {
-        console.log(event.target.parentElement.id)
-        resultprofile.classList.add("hidden")
-      }else{
-      resultprofile.classList.toggle("hidden")}
-    })
-  })</script>
 </nav>
-<header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
+<!-- <header class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
   <p class="rounded-md px-3 font-bold  bg-black dark:bg-white text-white uppercase hover:underline cursor-pointer dark:text-black">ALL</p>
   <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
   <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
-</header>
+</header> -->
     <div class="bg-transparent w-screen dark:bg-background" >
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
           <h2 id="sectionHeading" class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"></h2>
       
           <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
-            <div class="group relative">
-              <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
-                <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
-              </div>
-              <div class="mt-4 flex justify-between">
-                <div>
-                  <h3 class="text-sm text-gray-700">
-                    <a>
-                      <span aria-hidden="true" class="absolute inset-0"></span>
-                      Solo leveling
-                    </a>
-                  </h3>
-              </div>
-            </div>
-          </div>
         </div>
 
-        <h2 id="" class="text-2xl mt-8 font-extrabold tracking-tight text-gray-900 dark:text-white">Trending in Genre:</h2>
+        <h2 id="popularHeading" class="text-2xl mt-8 font-extrabold tracking-tight text-gray-900 dark:text-white">Trending in Genre:</h2>
       
-        <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
-          <div class="group relative">
-            <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
-              <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
-            </div>
-            <div class="mt-4 flex justify-between">
-              <div>
-                <h3 class="text-sm text-gray-700">
-                  <a>
-                    <span aria-hidden="true" class="absolute inset-0"></span>
-                    Solo leveling
-                  </a>
-                </h3>
-            </div>
-          </div>
-        </div>
+        <div id="popularSeries" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
       </div>
       <div id="recommendationDiv" class="">
         <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white mt-8"> Recommended For you:</h2>
@@ -186,6 +136,7 @@
       <script>
         let genre = window.location.pathname.split( '/' ).pop();
         document.getElementById('sectionHeading').innerHTML = `${genre.toUpperCase()} series:`;
+        document.getElementById('popularHeading').innerHTML = `Trending in ${genre.toUpperCase()} series:`;
       </script>
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
