--- a/html/home.html
+++ b/html/home.html
@@ -166,45 +166,46 @@
   <div class="bg-transparent w-screen dark:bg-background">
 
     <div class="w-full mx-auto pt-4 p-4 pb-0">
-      <div id="indicators-carousel" class="relative" data-carousel="Slide">
+      <div id="indicators-carousel" class="relative" data-carousel="slide">
         Carousel wrapper
         <div id="adsContainer" class="overflow-hidden relative h-48 rounded-lg sm:h-64 xl:h-96 2xl:h-96">
-          <div id="adContainer0" class="hidden duration-700 ease-in-out" data-carousel-item="active">
-            <img id="ad0" onclick="adRedirect(0)"
+          <div class="hidden duration-700 ease-in-out" data-carousel-item="active">
+            <img id="" onclick="adRedirect(0)"
               src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapers.net%2Fweb%2Fwallpapers%2Fanime-sunset-hd-wallpaper%2F5120x2160.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+            <h1 class="z-50 ">LOL</h1>
           </div>
-          <div id="adContainer1" class="hidden duration-700 ease-in-out" data-carousel-item>
+          <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad1" onclick="adRedirect(1)"
               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F4323980.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
           </div>
-          <div id="adContainer2" class="hidden duration-700 ease-in-out" data-carousel-item>
+          <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad2" onclick="adRedirect(2)"
               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F324051.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
           </div>
-          <div id="adContainer3" class="hidden duration-700 ease-in-out" data-carousel-item>
+          <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad3" onclick="adRedirect(3)"
               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp6396362.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
           </div>
-          <div id="adContainer4" class="hidden duration-700 ease-in-out" data-carousel-item>
+          <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad4" onclick="adRedirect(4)"
               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F4323986.jpg&f=1&nofb=1"
               class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
           </div>
         </div>
         <div class="flex absolute bottom-5 left-1/2 z-50 space-x-3 -translate-x-1/2">
-          <button type="button" id="adBtn0" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1"
+          <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1"
             data-carousel-slide-to="0"></button>
-          <button type="button" id="adBtn1" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
+          <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
             data-carousel-slide-to="1"></button>
-          <button type="button" id="adBtn2" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
+          <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
             data-carousel-slide-to="2"></button>
-          <button type="button" id="adBtn3" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4"
+          <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4"
             data-carousel-slide-to="3"></button>
-          <button type="button" id="adBtn4" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5"
+          <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5"
             data-carousel-slide-to="4"></button>
         </div>
         <button type="button"
@@ -238,8 +239,9 @@
     <script src="https://unpkg.com/flowbite@1.4.5/dist/flowbite.js"></script>
     <script>
       const options = {
+        
         activeItemPosition: 1,
-        interval: 3000,
+        interval: 100,
 
         indicators: {
           activeClasses: 'bg-white dark:bg-gray-800',
@@ -261,9 +263,11 @@
               position: 3,
               el: document.getElementById('carousel-indicator-4')
             },
+            carousel.cycle(100)
           ]
         }
       }
+      carousel.cycle()
     </script>
 
     <div class="max-w-2xl mx-auto md:py-10 px-4 py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
@@ -625,6 +629,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
     <script src="/js/init.js" type="module"></script>
     <script defer src="/js/home.js" type="module"></script>
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
 </body>
 
 </html>
