--- a/html/creator.html
+++ b/html/creator.html
@@ -137,27 +137,6 @@
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
-    <script>document.getElementById('togglemebutton').onclick = function () {
-        document.getElementById("resultnav").classList.toggle("hidden");
-      }
-
-      //document.getElementById('togglemebutton').onclick = function () {
-      //  document.getElementById("toggleme").classList.toggle("hidden");
-      //}
-
-
-      const toggleprofile = document.getElementById("toggleprofile");
-      const resultprofile = document.getElementById("resultprofile");
-      [...document.querySelectorAll('body')].forEach(el => {
-        el.addEventListener('click', event => {
-          if (event.target.parentElement.id !== "toggleprofile") {
-            console.log(event.target.parentElement.id)
-            resultprofile.classList.add("hidden")
-          } else {
-            resultprofile.classList.toggle("hidden")
-          }
-        })
-      })</script>
   </nav>
 
   <section>
@@ -192,12 +171,6 @@
                       <p class="text-sm text-gray-700 dark:text-gray-100" id="description">
                       </p>
                       <div class="py-2 flex space-x-2 top-5">
-                        <!-- <button id=""
-                          class="bg-transparent w-full hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded">
-                          Request
-                        </button> -->
-                        <!-- Modal -->
-                        <!-- <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script> -->
 
                         <div x-data="{ modelOpen: false }">
                           <button @click="modelOpen =!modelOpen"
@@ -364,7 +337,7 @@
                             </div>
                           </div>
                         </div>
-                        <button id=""
+                        <button id="btnDonate"
                           class="bg-transparent w-full hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-600 hover:border-transparent rounded">
                           Donate
                         </button>
@@ -398,7 +371,7 @@
                           <span>Youtube</span>
                         </a>
                       </div>
-                      <div class="flex justify-center items-center w-full divide-x divide-gray-400 divide-solid">
+                      <!-- <div class="flex justify-center items-center w-full divide-x divide-gray-400 divide-solid">
                         <span class="text-center px-2">
                           <span class="font-bold text-gray-900 dark:text-gray-200">56</span>
                           <span class="text-gray-800 dark:text-gray-300"> followers</span>
@@ -410,7 +383,7 @@
                           <span class="font-bold text-gray-900 dark:text-gray-200">2000</span>
                           <span class="text-gray-800 dark:text-gray-300"> Likes</span>
                         </span>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
