--- a/html/readComic.html
+++ b/html/readComic.html
@@ -34,8 +34,8 @@
 				</a>
 			</div>
 			<div class="flex w-full justify-center">
-				<a class="text-center text-xl text-cyan-300 no-underline hover:no-underline font-extrabold px-3  " href="/">
-					Solo leveling
+				<a id="seriesTitle" class="text-center text-xl text-cyan-300 no-underline hover:no-underline font-extrabold px-3">
+					
 				</a>
 			</div>
 			
