--- a/html/home.html
+++ b/html/home.html
@@ -267,7 +267,7 @@
           ]
         }
       }
-      carousel.cycle()
+      carousel.cycle(1000)
     </script>
 
     <div class="max-w-2xl mx-auto md:py-10 px-4 py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
