disabled right click on readcomic and readnovel

--- a/html/readComic.html
+++ b/html/readComic.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body class=" font-sans leading-normal tracking-normal bg-black">
+<body class=" font-sans leading-normal tracking-normal bg-black" oncontextmenu="return false;">
 
 	<nav id="header" class="fixed w-screen z-10 top-0">
 
