--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -134,7 +134,7 @@
 
 			</div>
 
-			<div id="editorjs" class="pt-6 text-lg m-0 p-0 font-sans overflow-hidden dark:text-gray-300"></div>
+			<div id="editorjs" class="pt-6 text-lg m-0 p-0 font-sans overflow-hidden dark:text-gray-300" style="-webkit-user-select: none; -ms-user-select: none; user-select: none;" onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false"></div>
 			
 		</div>
 
