--- a/html/creator.html
+++ b/html/creator.html
@@ -564,30 +564,30 @@
                           <div class="container px-5 py-2 mx-auto lg:pt-3 lg:px-4">
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/2 mx-auto">
- hover:w-full">
-                                  <img id="artSample0" alt="gallery" class="block object-cover  hover:object-fill object-center w-full h-full rounded-lg"
+                                <div class="w-1/2 p-1 md:p-2 ">
+                                  <img id="artSample0" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
-                                <div class="w-1/2 p-1 md:p-2 ease-in hover:w-full">
-                                  <img id="artSample1" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                <div class="w-1/2 p-1 md:p-2 ">
+                                  <img id="artSample1" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
-                                <div class="w-full p-1 md:p-2 ease-in  hover:w-full">
-                                  <img id="artSample2" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                <div class="w-full p-1 md:p-2 ">
+                                  <img id="artSample2" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                               </div>
                               <div class="flex flex-wrap w-1/2 mx-auto">
-                                <div class="w-full p-1 md:p-2ease-in  hover:w-full" >
-                                  <img id="artSample3" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                <div class="w-full p-1 md:p-2" >
+                                  <img id="artSample3" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
-                                <div class="w-1/2 p-1 md:p-2 ease-in hover:w-full">
-                                  <img id="artSample4" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                <div class="w-1/2 p-1 md:p-2 ">
+                                  <img id="artSample4" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
-                                <div class="w-1/2 p-1 md:p-2 ease-in duration-100 hover:w-full">
-                                  <img id="artSample5" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                <div class="w-1/2 p-1 md:p-2 ">
+                                  <img id="artSample5" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hover:scale-150 hover:object-contain ease-in-out duration-300"
                                     src="">
                                 </div>
                               </div>
