can delete only latest chapter

--- a/html/creator.html
+++ b/html/creator.html
@@ -173,7 +173,7 @@
                       <div class="py-2 flex space-x-2 top-5">
 
                         <div x-data="{ modelOpen: false }">
-                          <button @click="modelOpen =!modelOpen"
+                          <button id="btnRequest" @click="modelOpen =!modelOpen"
                             class="flex items-center justify-center  tracking-wide capitalize transition-colors duration-200 transform bg-transparent w-full hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-1 px-2 border border-blue-500 hover:border-transparent rounded">
 
                             <span>Request</span>
