fixed supabase select queries

--- a/html/Csearch.html
+++ b/html/Csearch.html
@@ -150,13 +150,13 @@
                     Search...
                 </div>
             </div>
-            <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
+            <!-- <nav :class="isOpen ? '' : 'hidden'" class="sm:flex sm:justify-center sm:items-center mt-4">
                 <div class="flex flex-col sm:flex-row">
                   <p class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0">All</a>
                   <p class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0">Artist</a>
                   <p class="mt-3 text-gray-600 dark:text-gray-100 hover:underline sm:mx-3 sm:mt-0">Writer</p>
                 </div>
-            </nav>
+            </nav> -->
             <div class="relative mt-6 max-w-lg mx-auto">
             <span class="absolute inset-y-0 left-0 pl-3 flex items-center">
                 <svg class="h-5 w-5 text-gray-500" viewBox="0 0 24 24" fill="none">
