--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -546,7 +546,7 @@
           <!-- Cards -->
           <div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-4">
             <!-- Card -->
-            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
+            <div class="flex items-center blur-sm p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
               <div class="p-3 mr-4 text-orange-500 bg-orange-100 rounded-full dark:text-orange-100 dark:bg-orange-500">
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                   <path
@@ -564,7 +564,7 @@
               </div>
             </div>
             <!-- Card -->
-            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
+            <div class="flex items-center blur-sm p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
               <div class="p-3 mr-4 text-green-500 bg-green-100 rounded-full dark:text-green-100 dark:bg-green-500">
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                   <path fill-rule="evenodd"
@@ -657,10 +657,10 @@
           </div>
 
           <!-- Charts -->
-          <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
+          <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200 ">
             Statistics
           </h2>
-          <div class="grid gap-6 mb-8 md:grid-cols-2">
+          <div class="grid gap-6 mb-8 md:grid-cols-2 blur-sm">
             <div class="min-w-0 p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
               <h4 class="mb-4 font-semibold text-gray-800 dark:text-gray-300">
                 Avergae Total Ratio
