creator page and dashboard

--- a/html/creator.html
+++ b/html/creator.html
@@ -402,11 +402,11 @@
                       </div>
                       <div class="flex justify-center items-center w-full divide-x divide-gray-400 divide-solid">
                         <span class="text-center px-2">
-                          <span class="font-bold text-gray-900 dark:text-gray-200">90</span>
+                          <span class="font-bold text-gray-900 dark:text-gray-200" id="creatorTotalLikeCount"></span>
                           <span class="text-gray-800 dark:text-gray-300"> Likes</span>
                         </span>
                         <span class="text-center px-2">
-                          <span class="font-bold text-gray-900 dark:text-gray-200">30</span>
+                          <span class="font-bold text-gray-900 dark:text-gray-200" id="creatorTotalSeriesCount"></span>
                           <span class="text-gray-800 dark:text-gray-300">Works</span>
                         <!-- </span><span class="text-center px-2">
                           <span class="font-bold text-gray-900 dark:text-gray-200">2000</span>
