--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -556,14 +556,46 @@
               </div>
               <div>
                 <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-                  Total Followers
+                  Creator rank
                 </p>
                 <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  6389
+                  I'll do this tomorrow
                 </p>
               </div>
             </div>
-            <!-- Card -->
+            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
+              <div class="p-3 mr-4 text-red-500 bg-red-100 rounded-full dark:text-cyan-100 dark:bg-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 17 15">
+                  <path fill-rule="evenodd"
+                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                </svg>
+              </div>
+              <div>
+                <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+                  Likes
+                </p>
+                <p id="creatorTotalLikeCount" class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+                  
+                </p>
+              </div>
+            </div>
+            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
+              <div class="p-3 mr-4 text-teal-500 bg-teal-100 rounded-full dark:text-teal-100 dark:bg-teal-500">
+                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                  <path fill-rule="evenodd"
+                    d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </div>
+              <div>
+                <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
+                  Total reads
+                </p>
+                <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+                  I'll do this tomorrow
+                </p>
+              </div>
+            </div>
             <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
               <div class="p-3 mr-4 text-green-500 bg-green-100 rounded-full dark:text-green-100 dark:bg-green-500">
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
@@ -577,42 +609,7 @@
                   Revenue
                 </p>
                 <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  $ 46,760.89
-                </p>
-              </div>
-            </div>
-            <!-- Card -->
-            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-              <div class="p-3 mr-4 text-red-500 bg-red-100 rounded-full dark:text-cyan-100 dark:bg-red-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 17 15">
-                  <path fill-rule="evenodd"
-                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-                </svg>
-              </div>
-              <div>
-                <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-                  Likes
-                </p>
-                <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  376
-                </p>
-              </div>
-            </div>
-            <!-- Card -->
-            <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
-              <div class="p-3 mr-4 text-teal-500 bg-teal-100 rounded-full dark:text-teal-100 dark:bg-teal-500">
-                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
-                  <path fill-rule="evenodd"
-                    d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z"
-                    clip-rule="evenodd"></path>
-                </svg>
-              </div>
-              <div>
-                <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
-                  Comments
-                </p>
-                <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  35
+                  Coming soon
                 </p>
               </div>
             </div>
@@ -656,8 +653,7 @@
             </div>
           </div>
 
-          <!-- Charts -->
-          <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
+          <!-- <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
             Statistics
           </h2>
           <div class="grid gap-6 mb-8 md:grid-cols-2">
@@ -667,7 +663,6 @@
               </h4>
               <canvas id="pie"></canvas>
               <div class="flex justify-center mt-4 space-x-3 text-sm text-gray-600 dark:text-gray-400">
-                <!-- Chart legend -->
                 <div class="flex items-center">
                   <span class="inline-block w-3 h-3 mr-1 bg-cyan-500 rounded-full"></span>
                   <span>Followers</span>
@@ -688,7 +683,6 @@
               </h4>
               <canvas id="line"></canvas>
               <div class="flex justify-center mt-4 space-x-3 text-sm text-gray-600 dark:text-gray-400">
-                <!-- Chart legend -->
                 <div class="flex items-center">
                   <span class="inline-block w-3 h-3 mr-1 bg-teal-600 rounded-full"></span>
                   <span>Web Novels</span>
@@ -699,7 +693,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </main>
     </div>
