--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -42,7 +42,7 @@
 			</div>
 
 			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20 " id="nav-content">
-				<ul class="list-reset lg:flex justify-end flex-1 items-center">
+				<ul class="list-reset lg:flex justify-end flex-1 items-center dark:bg-black">
 					<li class="mr-3">
 						<a id="prev" class="inline-block dark:text-gray-100 text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 " href="#">
 							<div class="flex items-center justify-center">
