--- a/html/readComic.html
+++ b/html/readComic.html
@@ -18,66 +18,47 @@
 	<link href="/css/output.css" rel="stylesheet">
 </head>
 
+	<nav id="header" class="fixed w-full z-10 top-0 ">
 
-<body class=" font-sans leading-normal tracking-normal bg-black" oncontextmenu="return false;">
+		<div id="progress" class="h-1 z-20 top-0" style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>
 
-	<nav id="header" class="fixed w-screen z-10 top-0">
-
-		<div id="progress" class="h-1 z-20 top-0"
-			style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>
-
-		<div class="w-full md:max-w-4xl mx-auto grid grid-flow-col grid-cols-3 sm:grid-flow-row items-center justify-between mt-0 py-3">
+		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
 
 			<div class="pl-4">
-				<a class="text-gray-100 text-base no-underline hover:no-underline font-extrabold" href="/">
+				<a class="text-gray-900 dark:text-gray-100 text-base no-underline hover:no-underline font-extrabold" href="/">
 					YUME
 				</a>
 			</div>
-			<div class="flex w-full justify-center">
-				<a id="seriesTitle" class="text-center text-xl text-cyan-300 no-underline hover:no-underline font-extrabold px-3">
-					
-				</a>
-			</div>
-			
-			<!-- <div class="block lg:hidden pr-4">
-				<button id="nav-toggle"
-					class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-green-500 appearance-none focus:outline-none">
+
+			<div class="block lg:hidden pr-4">
+				<button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-green-500 appearance-none focus:outline-none">
 					<svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
 						<title>Menu</title>
 						<path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
 					</svg>
 				</button>
-			</div> -->
+			</div>
 
-			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto  mt-2 lg:mt-0  md:bg-transparent z-20"
-				id="">
-				<ul class="list-reset lg:flex justify-end flex-1 items-center">
+			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20 " id="nav-content">
+				<ul class="list-reset lg:flex justify-end flex-1 items-center dark:bg-black">
 					<li class="mr-3">
-						<a id="prev"
-							class="inline-block text-gray-300 no-underline hover:text-white hover:text-underline py-2 px-4 "
-							href="#">
+						<a id="prev" class="inline-block dark:text-gray-100 text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 " href="#">
 							<div class="flex items-center justify-center">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-									class="bi bi-caret-left-fill" viewBox="0 0 16 16">
-									<path
-										d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z" />
-								</svg> Prev
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
+									<path d="m3.86 8.753 5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
+								  </svg> Prev
 							</div>
 						</a>
 					</li>
 					<li class="mr-3">
-						<a class="inline-block py-2 px-4 text-gray-100 font-bold no-underline" id="chapNum">10</a>
+						<a class="inline-block py-2 px-4 text-gray-900 font-bold no-underline dark:text-gray-100" id="chapNum"></a>
 					</li>
 					<li class="mr-3">
-						<a id="next"
-							class="inline-block text-gray-300 no-underline hover:text-white hover:text-underline py-2 px-4"
-							href="#">
+						<a id="next" class="inline-block dark:text-gray-100 text-gray-600 no-underline hover:text-gray-900 hover:text-underline py-2 px-4" href="#">
 							<div class="flex items-center justify-center">
-								Next<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-									class="bi bi-caret-right-fill" viewBox="0 0 16 16">
-									<path
-										d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z" />
-								</svg>
+								Next<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+									<path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+								  </svg>
 							</div>
 						</a>
 					</li>
@@ -86,10 +67,12 @@
 		</div>
 	</nav>
 
-
+	<body class=" font-sans leading-normal tracking-normal bg-black" oncontextmenu="return false;">
 
 	<!--Container-->
 	<div class="container w-full md:max-w-3xl mx-auto pt-20 ">
+		<p class="text-base md:text-sm text-cyan-700 font-bold text-center"> <a id="seriesTitle" href="" class="text-base md:text-xl text-cyan-700 dark:text-cyan-400 font-bold no-underline hover:underline">Solo leveling</a></p>
+
 
 		<div class="w-full px-4 md:px-6 text-xl text-gray-800 leading-normal" style="font-family:Georgia,serif;">
 
