--- a/html/creator.html
+++ b/html/creator.html
@@ -370,6 +370,10 @@
                           class="bg-transparent w-full hover:bg-green-500 text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-600 hover:border-transparent rounded">
                           Donate
                         </button>
+                        <button id=""
+                        class="bg-transparent w-full hover:bg-green-500 dark:text-green-500 dark:border-green-400 hover:dark:text-white text-green-700 font-semibold hover:text-white py-1 px-2 border border-green-600 hover:border-transparent rounded">
+                        Follow
+                      </button>
                       </div>
 
                       <div class="flex items-center justify-center space-x-3 ">
