--- a/html/home.html
+++ b/html/home.html
@@ -150,27 +150,27 @@
           <div id="adContainer0" class="hidden duration-700 ease-in-out" data-carousel-item="active">
             <img id="ad0" onclick="adRedirect(0)"
               src=""
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="Ad 1">
           </div>
           <div id="adContainer1" class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad1" onclick="adRedirect(1)"
               src=""
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="Ad 2">
           </div>
           <div id="adContainer2" class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad2" onclick="adRedirect(2)"
               src=""
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="Ad 3">
           </div>
           <div id="adContainer3" class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad3" onclick="adRedirect(3)"
               src=""
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="Ad 4">
           </div>
           <div id="adContainer4" class="hidden duration-700 ease-in-out" data-carousel-item>
             <img id="ad4" onclick="adRedirect(4)"
               src=""
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="...">
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2" alt="Ad 5">
           </div>
         </div>
         <div class="flex absolute bottom-5 left-1/2 z-50 space-x-3 -translate-x-1/2">
@@ -212,40 +212,6 @@
       </div>
 
     </div>
-
-    <script src="https://unpkg.com/flowbite@1.4.5/dist/flowbite.js"></script>
-    <script>
-      const options = {
-        
-        activeItemPosition: 1,
-        interval: 100,
-
-        indicators: {
-          activeClasses: 'bg-white dark:bg-gray-800',
-          inactiveClasses: 'bg-white/50 dark:bg-gray-800/50 hover:bg-white dark:hover:bg-gray-800',
-          items: [
-            {
-              position: 0,
-              el: document.getElementById('carousel-indicator-1')
-            },
-            {
-              position: 1,
-              el: document.getElementById('carousel-indicator-2')
-            },
-            {
-              position: 2,
-              el: document.getElementById('carousel-indicator-3')
-            },
-            {
-              position: 3,
-              el: document.getElementById('carousel-indicator-4')
-            },
-            carousel.cycle(100)
-          ]
-        }
-      }
-      carousel.cycle(1000)
-    </script>
 
     <div class="max-w-2xl mx-auto md:py-10 px-4 py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
 
@@ -606,7 +572,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
     <script src="/js/init.js" type="module"></script>
     <script defer src="/js/home.js" type="module"></script>
-    <script src="../path/to/flowbite/dist/flowbite.js"></script>
+    <script defer src="https://unpkg.com/flowbite@1.4.5/dist/flowbite.js"></script>
 </body>
 
 </html>
