--- a/html/creator.html
+++ b/html/creator.html
@@ -568,7 +568,7 @@
                   <div class="w-full mb-8 overflow-hidden rounded-lg shadow-xs">
                     <div class="w-full overflow-x-auto">
 
-                      <div id="sampleArtsContainer" style="-webkit-user-select: none; -ms-user-select: none; user-select: none;" onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false" oncontextmenu="return false;">
+                      <div id="sampleArtsContainer" style="-webkit-user-select: none; -ms-user-select: none; user-select: none;" onselectstart="return false" onpaste="return false;" onCopy="return false" onCut="return false" onDrag="return false" onDrop="return false">
                         <h4 class=" mt-5 text-lg font-semibold text-black dark:text-gray-300 ">
                           Samples:
                         </h4>
