--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -75,7 +75,7 @@
 
 			<!--Title-->
 			<div class="font-sans">
-				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a id="seriesTitle" href="" class="text-base md:text-xl text-cyan-700 dark:text-cyan-400 font-bold no-underline hover:underline">Solo leveling</a></p>
+				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a id="seriesTitle" href="" class="text-base md:text-xl text-cyan-700 dark:text-cyan-400 font-bold no-underline hover:underline"></a></p>
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl dark:text-gray-100"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 						<p id="chapReads" class="text-sm md:text-base font-normal text-gray-600"></p>
