--- a/html/engagement.html
+++ b/html/engagement.html
@@ -613,7 +613,7 @@
 
                             <p class="mt-2 text-sm text-gray-500 ">
                               Feeds help you to communicate to <span id="adaptee"
-                                class="font-bold text-blue-600"></span> increase engagement with audience.
+                                class="font-bold text-blue-600"></span> increase engagement with audience. <br> <br> Note that messages posted to your feed are automatically deleted after a month.
                             </p>
 
                             <div class="flex flex-col mt-4">
