--- a/html/creator.html
+++ b/html/creator.html
@@ -401,52 +401,55 @@
                 </div>
                 <!---->
               </div>
-              <h4 class="text-lg font-semibold text-black dark:text-gray-300 mt-8">
-                Most Popular:
-              </h4>
-              <div class="max-w-2xl mx-auto py-8 px-4 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
 
-                <div class="grid md:grid-cols-3 md:divide-dashed md:divide-x-4 sm:grid ">
-
-                  <div class="grid md:grid-cols-4 md:max-w-2xl  md:mb-5 md:grid-flow-col col-span-2">
-                    <div class="relative mt-4 col-start-1 col-span-2 justify-center sm:grid-flow-row">
-                      <div class="relative"><img class="h-72 object-cover aspect-square shadow-lg" id="mostPopularCover"
-                          src="" alt="Most popular work"></div>
-                      <p class="absolute top-0 left-0 text-5xl m-4 text-white bg-black rounded-md p-1 px-2 ">1</p>
-                      <div class="text-gray-400 text-sm "><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a
-                          id="mostPopularGenre2"></a></div>
+              <div id="mostPopularContainer">
+                <h4 class="text-lg font-semibold text-black dark:text-gray-300 mt-8">
+                  Most Popular:
+                </h4>
+                <div class="max-w-2xl mx-auto py-8 px-4 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
+  
+                  <div class="grid md:grid-cols-3 md:divide-dashed md:divide-x-4 sm:grid ">
+  
+                    <div class="grid md:grid-cols-4 md:max-w-2xl  md:mb-5 md:grid-flow-col col-span-2">
+                      <div class="relative mt-4 col-start-1 col-span-2 justify-center sm:grid-flow-row">
+                        <div class="relative"><img class="h-72 object-cover aspect-square shadow-lg" id="mostPopularCover"
+                            src="" alt="Most popular work"></div>
+                        <p class="absolute top-0 left-0 text-5xl m-4 text-white bg-black rounded-md p-1 px-2 ">1</p>
+                        <div class="text-gray-400 text-sm "><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a
+                            id="mostPopularGenre2"></a></div>
+                      </div>
+                      <div class="flex flex-col col-span-2  ">
+                        <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
+                        <a class="font-bold text-gray-500 text-base dark:text-gray-300"
+                          id="mostPopularCreatorUsername"></a>
+                        <div class="text-gray-600 text-left mt-6" id="mostPopularSummary"></div>
+  
+                      </div>
                     </div>
-                    <div class="flex flex-col col-span-2  ">
-                      <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
-                      <a class="font-bold text-gray-500 text-base dark:text-gray-300"
-                        id="mostPopularCreatorUsername"></a>
-                      <div class="text-gray-600 text-left mt-6" id="mostPopularSummary"></div>
-
-                    </div>
-                  </div>
-                  <div class="flex flex-col md:pl-6 divide-y">
-                    <p class="text-lg font-semibold text-black dark:text-gray-300">Feed</p>
-
-                    <div id="feedContainer">
-                      <!-- <div class="flex justify-center">
-                        <div class="min-w-full">
-                          <div class="block rounded-lg bg-white mt-6 shadow-md shadow-cyan-300">
-                            <div class="md:flex md:flex-row">
-                              <div class="md:ml-6 md:mr-6">
-                                <p class="text-gray-500 font-light mb-2 text-sm mt-2">
-                                  no chapter of One Piece this week. :(
-                                </p>
-                                <p class="text-gray-500 text-xs mb-2">2/04/2022</p>
+                    <div class="flex flex-col md:pl-6 divide-y">
+                      <p class="text-lg font-semibold text-black dark:text-gray-300">Feed</p>
+  
+                      <div id="feedContainer">
+                        <!-- <div class="flex justify-center">
+                          <div class="min-w-full">
+                            <div class="block rounded-lg bg-white mt-6 shadow-md shadow-cyan-300">
+                              <div class="md:flex md:flex-row">
+                                <div class="md:ml-6 md:mr-6">
+                                  <p class="text-gray-500 font-light mb-2 text-sm mt-2">
+                                    no chapter of One Piece this week. :(
+                                  </p>
+                                  <p class="text-gray-500 text-xs mb-2">2/04/2022</p>
+                                </div>
                               </div>
                             </div>
                           </div>
-                        </div>
-                      </div> -->
+                        </div> -->
+                      </div>
+  
                     </div>
-
+  
+  
                   </div>
-
-
                 </div>
               </div>
 
