--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -564,7 +564,7 @@
                 <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
                   Creator rank
                 </p>
-                <p id="creatorRank" class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+                <p id="creatorRank" class="text-lg font-semibold text-gray-700 dark:text-gray-200"> N/A
                 </p>
               </div>
             </div>
@@ -579,8 +579,7 @@
                 <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
                   Likes
                 </p>
-                <p id="creatorTotalLikeCount" class="text-lg font-semibold text-gray-700 dark:text-gray-200">
-                  
+                <p id="creatorTotalLikeCount" class="text-lg font-semibold text-gray-700 dark:text-gray-200"> 0
                 </p>
               </div>
             </div>
@@ -596,7 +595,7 @@
                 <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">
                   Total reads
                 </p>
-                <p id="creatorTotalReadCount" class="text-lg font-semibold text-gray-700 dark:text-gray-200">
+                <p id="creatorTotalReadCount" class="text-lg font-semibold text-gray-700 dark:text-gray-200"> 0
                 </p>
               </div>
             </div>
