--- a/html/account.html
+++ b/html/account.html
@@ -619,36 +619,19 @@
   <script defer src="/js/init.js" type="module"></script>
   <script defer src="/js/account.js" type="module"></script>
 
-  <script>let form = document.getElementById("login");
+  <script>
+    let form = document.getElementById("login");
     form.addEventListener(
       "submit",
       function (event) {
         event.preventDefault();
-        let elements = form.elements;
-        let payload = {};
-        for (let i = 0; i < elements.length; i++) {
-          let item = elements.item(i);
-          switch (item.type) {
-            case "checkbox":
-              payload[item.name] = item.checked;
-              break;
-            case "submit":
-              break;
-            default:
-              payload[item.name] = item.value;
-              break;
-          }
-        }
-        console.log("payload", payload);
-      },
-      true
-    );
+      });
   </script>
   <script>
     function previewPfp(e) {
       if (e.target.files.length > 0) {
         var src = URL.createObjectURL(e.target.files[0]);
-        var preview = document.getElementById("pfp");
+        var preview = document.getElementById("pfpImg");
         preview.src = src;
         preview.style.display = "block";
       }
