--- a/html/library.html
+++ b/html/library.html
@@ -136,13 +136,10 @@
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
-    <script>document.getElementById('togglemebutton').onclick = function () {
+    <script>
+      document.getElementById('togglemebutton').onclick = function () {
         document.getElementById("resultnav").classList.toggle("hidden");
       }
-  
-      //document.getElementById('togglemebutton').onclick = function () {
-      //  document.getElementById("toggleme").classList.toggle("hidden");
-      //}
   
   
       const toggleprofile = document.getElementById("toggleprofile");
@@ -150,7 +147,6 @@
       [...document.querySelectorAll('body')].forEach(el => {
         el.addEventListener('click', event => {
           if (event.target.parentElement.id !== "toggleprofile") {
-            console.log(event.target.parentElement.id)
             resultprofile.classList.add("hidden")
           } else {
             resultprofile.classList.toggle("hidden")
