--- a/html/popular.html
+++ b/html/popular.html
@@ -132,27 +132,6 @@
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
-    <script>document.getElementById('togglemebutton').onclick = function () {
-        document.getElementById("resultnav").classList.toggle("hidden");
-      }
-  
-      //document.getElementById('togglemebutton').onclick = function () {
-      //  document.getElementById("toggleme").classList.toggle("hidden");
-      //}
-  
-  
-      const toggleprofile = document.getElementById("toggleprofile");
-      const resultprofile = document.getElementById("resultprofile");
-      [...document.querySelectorAll('body')].forEach(el => {
-        el.addEventListener('click', event => {
-          if (event.target.parentElement.id !== "toggleprofile") {
-            console.log(event.target.parentElement.id)
-            resultprofile.classList.add("hidden")
-          } else {
-            resultprofile.classList.toggle("hidden")
-          }
-        })
-      })</script>
   </nav>
 
 
@@ -253,6 +232,25 @@
     });
 
   </script>
+
+<script>
+  document.getElementById('togglemebutton').onclick = function () {
+    document.getElementById("resultnav").classList.toggle("hidden");
+  }
+
+
+
+  const toggleprofile = document.getElementById("toggleprofile");
+  const resultprofile = document.getElementById("resultprofile");
+  [...document.querySelectorAll('body')].forEach(el => {
+    el.addEventListener('click', event => {
+      if (event.target.parentElement.id !== "toggleprofile") {
+        resultprofile.classList.add("hidden")
+      } else {
+        resultprofile.classList.toggle("hidden")
+      }
+    })
+  })</script>
 
       <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
       <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
